--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ th,td{
         </div>
         <div class="menu">
             <ul style="color: #2586ac;">
-                <li><a href="new.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="events.html">Events</a></li>
                 <li><a href="p.html">Login</a></li>
                 <li><a href="#C9">About</a></li>
