--- a/services.html
+++ b/services.html
@@ -21,7 +21,7 @@
     </div>
     <div class="menu" >
         <ul >
-            <li><a href="new.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="#">Blog</a></li>
             <li><a href="p.html">Login</a></li>
             <li><a href="#">About</a></li>
