--- a/eplanners.html
+++ b/eplanners.html
@@ -22,7 +22,7 @@
     <div class="menu" >
         <ul >
             <li><a href="index.html">Home</a></li>
-            <li><a href="events.html">Blog</a></li>
+            <li><a href="events.html">Events</a></li>
             <li><a href="p.html">Login</a></li>
             <li><a href="about_us.html">About</a></li>
             <li><a href="services.html">Services</a></li>
