--- a/form.html
+++ b/form.html
@@ -31,10 +31,10 @@
     <div class="menu" >
         <ul >
             <li><a href="index.html">Home</a></li>
-            <li><a href="#">Blog</a></li>
+            <li><a href="events.html">Events</a></li>
             <li><a href="p.html">Login</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Services</a></li>
+            <li><a href="about_us.html">About</a></li>
+            <li><a href="services.html">Services</a></li>
             <!-- <li><a href="#">ContactUs</a></li> -->
         </ul>
     </div>
