--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@ th,td{
                 <li><a href="index.html">Home</a></li>
                 <li><a href="events.html">Events</a></li>
                 <li><a href="p.html">Login</a></li>
-                <li><a href="#C9">About</a></li>
-                <li><a href="#C10">Services</a></li>
+                <li><a href="about_us.html">About</a></li>
+                <li><a href="services.html">Services</a></li>
                 <!-- <li><a href="#C5">ContactUs</a></li> -->
             </ul>
         </div>
